--- a/api/Gemfile
+++ b/api/Gemfile
@@ -5,7 +5,7 @@ gem 'byebug'
 gem 'sinatra'
 gem 'sinatra-cross_origin', '~> 0.3.1'
 gem 'thin'
-
+gem 'json'
 group :development do
   gem 'web-console', '>= 3.3.0'
 end
