--- a/api/Gemfile
+++ b/api/Gemfile
@@ -1,11 +1,12 @@
 source 'https://rubygems.org'
-ruby '2.6.5'
+ruby '2.5.3'
 
 gem 'byebug'
 gem 'sinatra'
 gem 'sinatra-cross_origin', '~> 0.3.1'
 gem 'thin'
 gem 'json'
+gem 'rest-client'
 group :development do
   gem 'web-console', '>= 3.3.0'
 end
